--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,7 @@
 # outputs, checkpoints
-./out/*
-./train/*
+./out/
+!/out/gitkeep
+./train/
+!/train/.gitkeep
 ./examples
 
-# virtualenv
-.venv/
-venv/
-ENV/
-
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
