--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 #control flags
 DOTRAIN: True       #train model from scratch
-PREPLOT: False       #plot some images before running model
+PREPLOT: True       #plot some images before running model
 POSTPLOT: True       #plot accuracy and loss over time
 LAYEROUTPLOT: False  #plot layer outputs
 
