separate functions per model

--- a/config.yaml
+++ b/config.yaml
@@ -14,11 +14,13 @@ odirname: 'out'      #output directory relative to script
 cptoload: '/home/lachlan/CODEBASE/Patch_camelyon/train/220911_vacc75_c2d64/cp-0032.ckpt'
 
 #data and model handling
-batchlen: 1024    #size of batch for fitting
+#batchsize: 1024    #size of batch for fitting
+batchsize: 128
 buffer: 10000       #buffer for shuffling
 nepochs: 100       #no. epochs
 stoplim: 3        #patience for early stop
 savesteps: 257     #save checkpoint every X steps
+imageresize: 196
 
 #hyperparams
 lamda: 0.0001      #regularisation param
