--- a/config.yaml
+++ b/config.yaml
@@ -20,8 +20,13 @@ buffer: 10000       #buffer for shuffling
 nepochs: 100       #no. epochs
 stoplim: 3        #patience for early stop
 savesteps: 257     #save checkpoint every X steps
+
+premodel: resnet
 sizetarget: 196
 learnrate: 0.001
+#premodel: efficientnet
+#sizetarget: 96
+#learnrate: 0.001
 
 #hyperparams
 lamda: 0.0001      #regularisation param
