--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ mccabe==0.7.0
 nest-asyncio==1.5.6
 numpy==1.21.6
 oauthlib==3.2.0
+opencv-python==4.6.0.66
 opt-einsum==3.3.0
 packaging==21.3
 pandas==1.3.5
